--- a/about-us.html
+++ b/about-us.html
@@ -124,7 +124,7 @@
                         <div class="company_skill">
                             <p>Download our white paper to discover the opportunities and threats in urban delivery.</p>
                             <span class="input-group-btn">
-                                <button class="btn btn-primary submit_btn" href="https://github.com/FlumenStream/FlumenStream.github.io/raw/master/flumen.pdf" type="button">Download</button>
+                                <button id="button" class="btn btn-primary submit_btn" onClick="https://github.com/FlumenStream/FlumenStream.github.io/raw/master/flumen.pdf" type="button">Download</button>
                             </span>
                         </div>
                     </div>
@@ -220,5 +220,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="js/smoothscroll.js"></script>
 
         <script src="js/theme.js"></script>
+        <script src="js/script_1.js"></script>
     </body>
 </html>
