--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
         
         <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Sierra</title>
+        <title>Flumen</title>
 
         <!-- Icon css link -->
         <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -89,9 +89,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-1.png" alt="">
                             </div>
-                            <h4>Brand Identity</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                            <a class="more_btn" href="#">Read More</a>
+                            <h4>Fast Delivery</h4>
+                            <p>Thanks to the store network, Flumen estimates that the delivery will take less than 5 hops and, according to estimations a parcel can be delivered in less than a couple of hours. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -99,9 +98,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-2.png" alt="">
                             </div>
-                            <h4>Online Marketing</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                            <a class="more_btn" href="#">Read More</a>
+                            <h4>Node Pick up</h4>
+                            <p>Users will be able to pickup or drop off the parcel at an affiliated node. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -109,9 +107,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-3.png" alt="">
                             </div>
-                            <h4>Social Media</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                            <a class="more_btn" href="#">Read More</a>
+                            <h4>Scheduled delivery</h4>
+                            <p>In case users want to receive the parcel at home they can specify a time range in which they would like to receive the package at home. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -119,9 +116,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-4.png" alt="">
                             </div>
-                            <h4>Video Support</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                            <a class="more_btn" href="#">Read More</a>
+                            <h4>Live Tracking</h4>
+                            <p>Users will be able to see on a map the location of their parcel. The position will be retrieved from the system that will return the node position when it is temporarily stored in a node or the messenger position when the parcel is being transported. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -129,9 +125,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-5.png" alt="">
                             </div>
-                            <h4>Fast Support</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                            <a class="more_btn" href="#">Read More</a>
+                            <h4>Easy Return Management</h4>
+                            <p> Users will be able to call on demand a messenger to their doorstep in order to return a parcel after the return has been acknowledged from the merchant. Return can be also exploited through the network of nodes. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -139,8 +134,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-6.png" alt="">
                             </div>
-                            <h4>Download test</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Fast Support</h4>
+                            <p>Need something? Ask our chatbot or our customer service staff</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
