--- a/contact.html
+++ b/contact.html
@@ -48,18 +48,18 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" >Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" >Portfolio</a></li>
                         <li class="nav-item dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Blog
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" >Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" >Blog Details</a></li>
+                                <li class="nav-item"><a class="nav-link" >Elements</a></li>
                             </ul>
                         </li>
                         <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -110,9 +110,9 @@
                                 <h6>Say hello</h6>
                                 <h2>Get in touch, send us an e-mail or call us</h2>
                             </div>
-                            <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                            <p></p>
                             <a href="tel:+45237395593232"><h5>Call us now</h5></a>
-                            <a href="tel:+45237395593232"><h4>+452373 95593 232</h4></a>
+                            <a href="tel:+45237395593232"><h4>+39 3343755938</h4></a>
                         </div>
                     </div>
                 </div>
@@ -135,8 +135,8 @@
                 <div class="container">
                     <div class="map_l_box_inner">
                         <div class="bd-callout">
-                            <h3>Gibraltar Office</h3>
-                            <p>Casemates Square, no253 <br /> United kingdom</p>
+                            <h3>Flumen HQ</h3>
+                            <p>Politecnico di Milano campus Bovisa <br /> Italy</p>
                             <h4><a href="#">+453678 9283 559</a> <a href="#">contact@template.com</a></h4>
                         </div>
                     </div>
@@ -152,25 +152,8 @@
                     <div class="row footer_widget_inner">
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
-                                <img src="img/footer-logo.png" alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
-                            </aside>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <aside class="f_widget f_insta_widget">
-                                <div class="f_title">
-                                    <h3>Instagram</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="#"><img src="img/instagram/ins-1.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-2.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-3.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-4.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-5.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-6.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-7.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-8.jpg" alt=""></a></li>
-                                </ul>
+                                <img src="img/flumen.png" height="100" lenght="300" alt="">
+                                <p>Experts in urban delivery and return management. Last and first mile innovators.</p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
