--- a/service.html
+++ b/service.html
@@ -48,18 +48,18 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about-us.html">About Us </a></li>
                         <li class="nav-item active"><a class="nav-link" href="service.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" >Portfolio</a></li>
                         <li class="nav-item dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Blog
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" >Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" >Blog Details</a></li>
+                                <li class="nav-item"><a class="nav-link" >Elements</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -87,7 +87,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-1.png" alt="">
+                                <img src="img/icon/f-icon-3.png" alt="">
                             </div>
                             <h4>Fast Delivery</h4>
                             <p>Thanks to the store network, Flumen estimates that the delivery will take less than 5 hops and, according to estimations a parcel can be delivered in less than a couple of hours. </p>
@@ -123,7 +123,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-3.png" alt="">
+                                <img src="img/icon/f-icon-7.png" alt="">
                             </div>
                             <h4>Easy Return Management</h4>
                             <p> Users will be able to call on demand a messenger to their doorstep in order to return a parcel after the return has been acknowledged from the merchant. Return can be also exploited through the network of nodes. </p>
@@ -132,7 +132,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-6.png" alt="">
+                                <img src="img/icon/f-icon-1.png" alt="">
                             </div>
                             <h4>Fast Support</h4>
                             <p>Need something? Ask our chatbot or our customer service staff</p>
