--- a/service.html
+++ b/service.html
@@ -48,8 +48,8 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link">Home</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="service.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-7.png" alt="">
+                                <img src="img/icon/title-icon.png" height="78" lenght="78"alt="">
                             </div>
                             <h4>Easy Return Management</h4>
                             <p> Users will be able to call on demand a messenger to their doorstep in order to return a parcel after the return has been acknowledged from the merchant. Return can be also exploited through the network of nodes. </p>
@@ -163,7 +163,7 @@
                 <div class="container">
                     <div class="float-sm-left">
                         <h5><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h5>
                     </div>
                     <div class="float-sm-right">
