--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="company_skill">
                             <p>Download our white paper to discover the opportunities and threats in urban delivery.</p>
                             <span class="input-group-btn">
-                                <button id="button" class="btn btn-primary submit_btn" onClick="https://github.com/FlumenStream/FlumenStream.github.io/raw/master/flumen.pdf" type="button">Download</button>
+                                <button id="button" class="btn btn-primary submit_btn" onClick="https://drive.google.com/file/d/1y12wbVmcEMTQHen33th2lTJKnPd_abN4/view" type="button">Download</button>
                             </span>
                         </div>
                     </div>
