--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="company_skill">
-                            <p>Download our white paper to discover the opportunities and threats in urban delivery.</p>
+                            <p>Download our White Paper to discover the opportunities and threats in urban delivery.</p>
                             <span class="input-group-btn">
                                 <button id="button" class="btn btn-primary submit_btn" onClick="https://drive.google.com/file/d/1y12wbVmcEMTQHen33th2lTJKnPd_abN4/view" type="button">Download</button>
                             </span>
